--- a/inst/extdata/test_slides_2.Rmd
+++ b/inst/extdata/test_slides_2.Rmd
@@ -2,7 +2,7 @@
 title: "`r desc::desc_get('Title', '..')`"
 author: "Hao Ye"
 institute: "Health Science Center Libraries, University of Florida"
-date: "(updated: `r Sys.Date()`)"
+date: "2021-01-28"
 output:
   xaringan::moon_reader:
     lib_dir: libs
