--- a/inst/extdata/test_slides.Rmd
+++ b/inst/extdata/test_slides.Rmd
@@ -86,7 +86,7 @@ class: inverse, center, middle
 
 ---
 ```{r, echo = FALSE, fig.alt = "A screenshot of the website https://github.com/ha0ye/portalDS/settings/access, showing that the repo is visible to the public, and that only the owner can contribute to the repository. There is a green button with the text 'Invite a collaborator'."}
-knitr::include_graphics("github-manage-access.png")
+knitr::include_graphics("github-manage-access.png", dpi = NA)
 ```
 
 ---
@@ -103,7 +103,7 @@ Two people, A and B, are working together on one repo in GitHub:
 You get a warning when you try to push to GitHub.
 
 ```{r, echo = FALSE, fig.alt = "A screenshot of the warning from using GitHub Desktop when trying to push new commits to GitHub, and there are commits on GitHub that have not yet been fetched and merged locally. The warning reads 'Newer Commits on Remote; Desktop is unable to push commits to this branch because there are commits on the remote that are not present on your local branch. Fetch these new commits before pushing in order to reconcile them with your local commits.'"}
-knitr::include_graphics("newer-commits-warning.png")
+knitr::include_graphics("newer-commits-warning.png", dpi = NA)
 ```
 
 ---
@@ -130,7 +130,7 @@ knitr::include_graphics("newer-commits-warning.png")
 
 * when git cannot combine the changes automatically, you must manually create the merged file:
 ```{r, echo = FALSE, fig.alt = "A screenshot of BBedit showing the merge conflict. Line 6 is '<<<<<<< HEAD'`' indicating the start of one version of the file. Line 8 is '=======' indicating the end of one version and the beginning of the next. Line 10 shows '>>>>>>>' followed by a hash, indicating the end of the second version."}
-knitr::include_graphics("merge-conflict.png")
+knitr::include_graphics("merge-conflict.png", dpi = NA)
 ```
 
 ---
@@ -157,7 +157,7 @@ class: inverse, center, middle
 Manage work using branches - `merge` branches back to the primary branch when ready.
 
 ```{r, echo = FALSE, fig.alt = "A screenshot of the diagram from https://guides.github.com/introduction/flow/, showing conceptually how the 'GitHub flow' workflow works."}
-knitr::include_graphics("github-flow.png")
+knitr::include_graphics("github-flow.png", dpi = NA)
 ```
 
 ---
@@ -180,7 +180,7 @@ class: inverse, center, middle
 * A `branch` is a label for a set of commits.
 
 ```{r, echo = FALSE, out.width = "80%", fig.alt = "A diagram from https://www.atlassian.com/git/tutorials/using-branches, of a git repo represented in a diagram with commits as circular nodes, with edges between them showing the relationship between commits and their parents. There is a `Master` branch in light blue, a `Little Feature` branch in purple with one commit, and a `Big Feature` branch in green with 3 commits."}
-knitr::include_graphics("git-branch.svg")
+knitr::include_graphics("git-branch.svg", dpi = NA)
 ```
 .small[[img: https://www.atlassian.com/git/tutorials/using-branches]]
 
@@ -198,7 +198,7 @@ knitr::include_graphics("git-branch.svg")
 # Creating new branches (GitHub)
 
 ```{r, echo = FALSE, fig.alt = "screenshot of the GitHub interface, when clicking on the pulldown menu to switch branches; this interface also enables one to create new branches."}
-knitr::include_graphics("github-new-branch.png")
+knitr::include_graphics("github-new-branch.png", dpi = NA)
 ```
 
 ---
@@ -210,7 +210,7 @@ class: center, middle
 # Creating new branches (GitHub Desktop)
 
 ```{r, echo = FALSE, fig.cap = "screenshot of the GitHub Desktop interface, when clicking on the pulldown menu to switch branches; this interface also enables one to create new branches."}
-knitr::include_graphics("github-desktop-new-branch.png")
+knitr::include_graphics("github-desktop-new-branch.png", dpi = NA)
 ```
 
 ---
